# python-twelvefactor

./: .gitignore  .travis.yml  CHANGES  Dockerfile  Makefile  README.md  Vagrantfile  conftest.py  pyproject.toml  setup.cfg  setup.py  tests.py  tox.ini  twelvefactor.py
docs/: Makefile  api.rst  conf.py  contents.rst.inc  index.rst  installation.rst  make.bat  quickstart.rst  schema.rst
docs/_static/: custom.css
docs/_templates/: extra.html
examples/: example.py
scripts/: release.py
tests/: conftest.py  test_call.py  test_config.py  test_get.py  test_parse.py
