[tool.poetry]
name = "twelvefactor"
version = "0.2.0-alpha.0"
description = "Utilities for 12factor apps"
authors = [
  "Daniel Knell <contact@danielknell.co.uk>"
]
license = "MIT"
readme = "README.md"
homepage = "https://twelvefactor.craftedbyartisans.com/"
repository = "https://github.com/artisanofcode/python-twelvefactor/"
documentation = "https://twelvefactor.craftedbyartisans.com/"
keywords = ["12factor", "config", "environment", "env", "configuration"]
classifiers = [
  'Environment :: Web Environment',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
  'Topic :: Software Development :: Libraries :: Python Modules',
]
include = ["twelvefactor.py"]

[tool.poetry.dependencies]
python = ">= 3.6"
mypy_extensions = ">= 0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
hypothesis = "^3.71"
isort = "^4.3"
flake8 = "^3.5"
sphinx = "^1.8"
black = "^18.3-alpha.0"
docformatter = "^1.0"
toml = "^0.9.6"
mypy = "^0.630.0"
pytest-cov = "^2.6"
coveralls = "^1.5"
bandit = "^1.5"
sphinx-autodoc-typehints = "^1.5"


[tool.black]
line_length=79
