[tool.poetry]
name = "twelvefactor"
version = "0.2.0-alpha.0"
description = "Utilities for 12factor apps"
authors = [
  "Daniel Knell <contact@danielknell.co.uk>"
]
license = "MIT"
readme = "README.md"
homepage = "https://twelvefactor.craftedbyartisans.com/"
repository = "https://github.com/artisanofcode/python-twelvefactor/"
documentation = "https://twelvefactor.craftedbyartisans.com/"
keywords = ["12factor", "config", "environment", "env", "configuration"]
classifiers = [
  'Environment :: Web Environment',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
  'Topic :: Software Development :: Libraries :: Python Modules',
]
include = ["twelvefactor.py"]

[tool.poetry.dependencies]
python = ">= 3.6"
mypy_extensions = ">= 0.3.0"
sphinx-autodoc-typehints = { version = "^1.6", optional = true }
sphinx = { version = "^1.8", optional = true }
toml = { version = "^0.10.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^4.1"
hypothesis = "^4.4"
isort = "^4.3"
flake8 = "^3.5"
black = "^18.3-alpha.0"
docformatter = "^1.0"
mypy = "^0.660"
pytest-cov = "^2.6"
coveralls = "^1.5"
bandit = "^1.5"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints", "toml"]

[tool.black]
line_length=79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
